--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -1194,7 +1194,7 @@ service bugreport /system/bin/dumpstate -d -p -B -z -o /data/user_de/0/com.andro
     class main
     disabled
     oneshot
-    keycodes 114 115 116
+    #keycodes 114 115 116
 
 #Set GPU Opengles version
 on property:vendor.opengles.version=*
